--- a/media.html
+++ b/media.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="col_h">Media</h1>
-                    <p class="col_p">Have fun!</p>
+                    <p class="col_p">Have fun and watch whatever you want!</p>
                 </div>
                 
                     
