edited size of pictures and size of boxes

--- a/media.html
+++ b/media.html
@@ -100,9 +100,8 @@ Stranger Things
     created by the Duffer brothers for the streaming service Netflix. 
     The series is set in the 1980s in the fictional town of Hawkins, Indiana.
     Brave guys will have to learn the terrible secrets of their hometown
-    Faced with the terrible events taking place in their city, 5 boys from high school will save the city from a terrible misfortune!
 </div>
-<div><button class="movie-btn-str">
+<div><button class="movie-btn">
 Watch Now!
 
 </button></div>
@@ -138,6 +137,7 @@ Watch Now!
         <div class="movie-text">
             The story of a medieval country's civil war. The series
             is set on the fictional continents of Westeros and Essos in a world where seasons stretch on for years.
+            Follow the interesting storyline and impossible U-turns that happened in Vestoros
         </div>
        <a><div><button class="movie-btn">
         Watch Now!
