edited size of subscription part

--- a/Subscription.html
+++ b/Subscription.html
@@ -57,6 +57,7 @@
                 <li>Full Access</li>
                 <li>Without advertising</li>
                 <li>Any device available</li>
+                <li>Ultra HD Quality</li>
             </ul>
             <a href="#">BUY</a>
         </div>
@@ -75,6 +76,7 @@
                 <li>Full Access</li>
                 <li>You can add up to 6 people</li>
                 <li>Create your own chat</li>
+                <li>Any device available</li>
             </ul>
             <a href="#">BUY</a>
         </div>
