edited detalis about logo

--- a/media.html
+++ b/media.html
@@ -132,12 +132,12 @@ Watch Now!
         Game of Thrones
         </div>
         <div class="movie-image">
-        <img src="../Zenflix/img/gameofthronesmovie.jpg">
+        <img src="../Zenflix/img/gameofthronesmovie.jpg">   <!--400x400 size-->
         </div>
         <div class="movie-text">
             The story of a medieval country's civil war. The series
             is set on the fictional continents of Westeros and Essos in a world where seasons stretch on for years.
-            Follow the interesting storyline and impossible U-turns that happened in Vestoros
+            Follow the interesting storyline and impossible U-turns that happened in Westeros
         </div>
        <a><div><button class="movie-btn">
         Watch Now!
