Added new li for news

--- a/media.html
+++ b/media.html
@@ -20,6 +20,7 @@
                         <li><a href="../Zenflix/media.html">Media</a></li>
                         <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
                         <li><a href="#">About Us</a></li>
+                        <li><a href="../Zenflix/news.html">News</a></li>
                         
                     </ul>
                 </nav>
