added second section

--- a/news.html
+++ b/news.html
@@ -62,26 +62,30 @@
     </div>
 </div>
 
-<!--<div class="news-post">
-    <div class="news-img">
-        <img src="../Zenflix/img/news2.jpg" alt="">
-    </div>
-    <div class="news-info">
-        <div class="news-info-date">
-            <span>Thursday</span>
-            <span>19 November 2020 </span>
+
+</section>
+
+<section class="sec-news-2">
+    <div class="news-post-2">
+        <div class="news-img-2">
+            <img src="../Zenflix/img/news2.jpg" alt="">
         </div>
-        <h1 class="news-blog-title">
-            HBO approves filming of the full first season of the film adaptation of The Last of Us
-        </h1>
-        <p class="news-post-text">
-            Last spring, HBO launched the film adaptation of Naughty Dog's hit hit The Last of Us, 
-            which brought the world to its cult series Uncharted.
-         Since then, screenwriter Craig Mazin (Chernobyl) and creative director of the original source Neil Druckmann have worked on the project. 
-         And today we can say with confidence that their work was crowned with success: having familiarized with their creative work, 
-         the channel gave the go-ahead for the filming of the full first season.
-        </p>
-        <a href="#" class="news-post-btn">Read More</a>
+        <div class="news-info-2">
+            <div class="news-info-date-2">
+                <span>Thursday</span>
+                <span>19 November 2020 </span>
+            </div>
+            <h1 class="news-blog-title-2">
+                HBO approves filming of the full first season of the film adaptation of The Last of Us
+            </h1>
+            <p class="news-post-text-2">
+                Last spring, HBO launched the film adaptation of Naughty Dog's hit hit The Last of Us, 
+                which brought the world to its cult series Uncharted.
+             Since then, screenwriter Craig Mazin (Chernobyl) and creative director of the original source Neil Druckmann have worked on the project. 
+             And today we can say with confidence that their work was crowned with success: having familiarized with their creative work, 
+             the channel gave the go-ahead for the filming of the full first season.
+            </p>
+            <a href="#" class="news-post-btn-2">Read More</a>
+        </div>
     </div>
-</div>
 </section>
