Edited news sections

--- a/news.html
+++ b/news.html
@@ -65,27 +65,133 @@
 
 </section>
 
-<section class="sec-news-2">
-    <div class="news-post-2">
-        <div class="news-img-2">
+<section class="sec-news">
+    <div class="news-post">
+        <div class="news-img">
             <img src="../Zenflix/img/news2.jpg" alt="">
         </div>
-        <div class="news-info-2">
-            <div class="news-info-date-2">
+        <div class="news-info">
+            <div class="news-info-date">
                 <span>Thursday</span>
                 <span>19 November 2020 </span>
             </div>
-            <h1 class="news-blog-title-2">
+            <h1 class="news-blog-title">
                 HBO approves filming of the full first season of the film adaptation of The Last of Us
             </h1>
-            <p class="news-post-text-2">
+            <p class="news-post-text">
                 Last spring, HBO launched the film adaptation of Naughty Dog's hit hit The Last of Us, 
                 which brought the world to its cult series Uncharted.
              Since then, screenwriter Craig Mazin (Chernobyl) and creative director of the original source Neil Druckmann have worked on the project. 
              And today we can say with confidence that their work was crowned with success: having familiarized with their creative work, 
              the channel gave the go-ahead for the filming of the full first season.
             </p>
-            <a href="#" class="news-post-btn-2">Read More</a>
+            <a href="#" class="news-post-btn">Read More</a>
         </div>
     </div>
 </section>
+
+<section class="sec-news">
+    <div class="news-post">
+        <div class="news-img">
+            <img src="../Zenflix/img/news3.jpg" alt="">
+        </div>
+        <div class="news-info-3">
+            <div class="news-info-date">
+                <span>Monday</span>
+                <span>16 November 2020 </span>
+            </div>
+            <h1 class="news-blog-title">
+                Meet! Screen Angwa and Carrot from the film adaptation of "Guardians" by Terry Pratchett
+            </h1>
+            <p class="news-post-text">
+                It's time to enjoy another couple of exclusive promo videos for the Guardians series from Comic Book Resources. 
+                This time, City Guard Sergeant Angwa (Marama Corlett) and her colleague Morkou Reinetonsson (Adam Hugill) were in the spotlight. 
+                A kind of screen reading of the famous book series kicks off on BBC America on January 3.
+            </p>
+            <a href="#" class="news-post-btn">Read More</a>
+        </div>
+    </div>
+</section>
+
+<section class="sec-news">
+    <div class="news-post">
+        <div class="news-img">
+            <img src="../Zenflix/img/news4.jpg" alt="">
+        </div>
+        <div class="news-info-3">
+            <div class="news-info-date">
+                <span>Sunday</span>
+                <span>15 November 2020 </span>
+            </div>
+            <h1 class="news-blog-title">
+                Robert Patrick Joins Survivors in The Walking Dead Season 10 Finale
+            </h1>
+            <p class="news-post-text">
+                The official Twitter of the zombie series "The Walking Dead" has published a promo video for six additional episodes of season 10. 
+                The first bonus episode will air on cable AMC on February 28th.
+
+The video, albeit short, but quite informative: in addition to the returned Lauren Cohan in the image of Maggie, 
+a new character named Mace performed by Robert Patrick appeared in the frame. In the new episodes of the post-apocalyptic drama based on the comics by Robert Kirkman, 
+the heroes will have to deal with the consequences of the ended war with the Whisperers.
+            </p>
+            <a href="#" class="news-post-btn">Read More</a>
+        </div>
+    </div>
+</section>
+
+
+<!--Footer-->
+ 
+<div class="cont_3">
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="../Zenflix/img/logo.png" alt="">
+            <p>
+                Enjoy your favorite TV shows anywhere!
+            </p>
+            <div class="social">
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-twitch"></ion-icon></a>
+            </div>
+        </div>
+        <ul class="footer-right">
+            <li>
+            <h2>Content</h2>
+            <ul class="box">
+                <li><a href="#">Movies</a></li>
+                <li><a href="#">TV serials</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Schedule</a></li>
+                </ul>
+            </li>
+                <li class="feat">
+                    <h2>Information</h2>
+                    <ul class="box">
+                        <li><a href="#">Account</a></li>
+                        <li><a href="#">Viewing methods</a></li>
+                        <li><a href="#">Corporate information</a></li>
+            </ul>
+        </li>
+        <li>
+            <h2 class="footer-h2">Address</h2>
+            <ul class="box">
+                <li>69 Street, 73 House, 26 Flat</li>
+                <li>V17A A32UK</li>
+                <li>Florida</li>
+                <li>United States of America</li>
+                </ul>
+            </li>
+    </ul>
+    <div class="footer-bottom">
+        <p>Created by 00009474</p>
+    </div>
+    
+    
+    </footer>
+    </div>
+  
+</body>
+</html>
