added links to footer

--- a/media.html
+++ b/media.html
@@ -19,7 +19,7 @@
                         <li><a href="../Zenflix/index.html">Home</a></li>
                         <li><a href="../Zenflix/media.html">Media</a></li>
                         <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="../Zenflix/about.html">About Us</a></li>
                         <li><a href="../Zenflix/news.html">News</a></li>
                         
                     </ul>
@@ -55,16 +55,16 @@
 
                 <!--Images-->
                 <div class="slide first">
-                   <a href="#"><img src="../Zenflix/img/gameofthrones.jpg" alt=""></a> 
+                   <a href="https://www.youtube.com/watch?v=rlR4PJn8b8I&t=7s"><img src="../Zenflix/img/gameofthrones.jpg" alt=""></a> 
                 </div>
                 <div class="slide">
-                  <a href="#"><img src="../Zenflix/img/strangerthings2.jpg" alt=""></a>  
+                  <a href="https://www.youtube.com/watch?v=R1ZXOOLMJ8s&t=7s"><img src="../Zenflix/img/strangerthings2.jpg" alt=""></a>  
                 </div>
                 <div class="slide">
-                 <a href="#"><img src="../Zenflix/img/rickandmorty.jpg" alt=""></a>   
+                 <a href="https://www.youtube.com/watch?v=hl1U0bxTHbY&t=16s"><img src="../Zenflix/img/rickandmorty.jpg" alt=""></a>   
                 </div>
                 <div class="slide">
-                  <a href="#"><img src="../Zenflix/img/breakingbad.jpg" alt=""></a>  
+                  <a href="https://www.youtube.com/watch?v=1JLUn2DFW4w"><img src="../Zenflix/img/breakingbad.jpg" alt=""></a>  
                 </div>
 
                 <!--Auto start-->
@@ -402,10 +402,10 @@ Stranger Things (2016-...)
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">TV serials</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Articles</a></li>
+                <li><a href="../Zenflix/media.html">Movies</a></li>
+                <li><a href="../Zenflix/media.html">TV serials</a></li>
+                <li><a href="../Zenflix/news.html">News</a></li>
+                <li><a href="../Zenflix/about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
