--- a/Subscription.html
+++ b/Subscription.html
@@ -19,7 +19,7 @@
                     <li><a href="../Zenflix/index.html">Home</a></li>
                     <li><a href="../Zenflix/media.html">Media</a></li>
                     <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="../Zenflix/about.html">About Us</a></li>
                     <li><a href="../Zenflix/news.html">News</a></li>
                     
                 </ul>
@@ -60,7 +60,7 @@
                 <li>Any device available</li>
                 <li>Ultra HD Quality</li>
             </ul>
-            <a href="#">BUY</a>
+            <a href="../Zenflix/checkout.html">BUY</a>
         </div>
     </div>
     <div class="col">
@@ -79,7 +79,7 @@
                 <li>Create your own chat</li>
                 <li>Any device available</li>
             </ul>
-            <a href="#">BUY</a>
+            <a href="../Zenflix/checkout.html">BUY</a>
         </div>
     </div>
     <div class="col">
@@ -97,7 +97,7 @@
                 <li>For students the price is three times lower</li>
                 <li>Watch everywhere you want!</li>
             </ul>
-            <a href="#">BUY</a>
+            <a href="../Zenflix/checkout.html">BUY</a>
         </div>
     </div>
 </div>
@@ -148,10 +148,10 @@
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">TV serials</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Articles</a></li>
+                <li><a href="../Zenflix/media.html">Movies</a></li>
+                <li><a href="../Zenflix/media.html">TV serials</a></li>
+                <li><a href="../Zenflix/news.html">News</a></li>
+                <li><a href="../Zenflix/about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
