--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
                     <li><a href="../Zenflix/index.html">Home</a></li>
                     <li><a href="../Zenflix/media.html">Media</a></li>
                     <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="../Zenflix/about.html">About Us</a></li>
                     <li><a href="../Zenflix/news.html">News</a></li>
                     
                 </ul>
@@ -160,11 +160,11 @@ the heroes will have to deal with the consequences of the ended war with the Whi
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">TV serials</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Articles</a></li>
-                <li><a href="#">Schedule</a></li>
+            <li><a href="../Zenflix/media.html">Movies</a></li>
+            <li><a href="../Zenflix/media.html">TV serials</a></li>
+            <li><a href="../Zenflix/news.html">News</a></li>
+            <li><a href="../Zenflix/about.html">Articles</a></li>
+            <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
                 <li class="feat">
