Edited their path

--- a/Subscription.html
+++ b/Subscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Zenflix/styles/sub_styles.css">
+    <link rel="stylesheet" href="styles/sub_styles.css">
     <title>Zenflix</title>
     <!--Script for icons-->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
@@ -13,14 +13,14 @@
     <header>
     <div class="container">
         <div class="navbar">
-            <img src="../Zenflix/img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="../Zenflix/index.html">Home</a></li>
-                    <li><a href="../Zenflix/media.html">Media</a></li>
-                    <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="../Zenflix/about.html">About Us</a></li>
-                    <li><a href="../Zenflix/news.html">News</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="Subscription.html">Subscription</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="news.html">News</a></li>
                     
                 </ul>
             </nav>
@@ -60,7 +60,7 @@
                 <li>Any device available</li>
                 <li>Ultra HD Quality</li>
             </ul>
-            <a href="../Zenflix/checkout.html">BUY</a>
+            <a href="checkout.html">BUY</a>
         </div>
     </div>
     <div class="col">
@@ -79,7 +79,7 @@
                 <li>Create your own chat</li>
                 <li>Any device available</li>
             </ul>
-            <a href="../Zenflix/checkout.html">BUY</a>
+            <a href="checkout.html">BUY</a>
         </div>
     </div>
     <div class="col">
@@ -97,7 +97,7 @@
                 <li>For students the price is three times lower</li>
                 <li>Watch everywhere you want!</li>
             </ul>
-            <a href="../Zenflix/checkout.html">BUY</a>
+            <a href="checkout.html">BUY</a>
         </div>
     </div>
 </div>
@@ -116,7 +116,7 @@
 </p>
 
 <!--https://sm.ign.com/ign_ru/screenshot/default/stranger-things-3-recensione_rack.jpg-->
-<img src="../Zenflix/img/strangerthings.jpg" width="525" height="296" alt="img" class="sub-img">
+<img src="img/strangerthings.jpg" width="525" height="296" alt="img" class="sub-img">
 
 <h2 class="sub-content">Advantages of Subscription</h2>
 <ul class="sub-advantages">
@@ -133,7 +133,7 @@
 <div class="cont_3">
     <footer class="footer">
         <div class="footer-left">
-            <img src="../Zenflix/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>
                 Enjoy your favorite TV shows anywhere!
             </p>
@@ -148,10 +148,10 @@
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="../Zenflix/media.html">Movies</a></li>
-                <li><a href="../Zenflix/media.html">TV serials</a></li>
-                <li><a href="../Zenflix/news.html">News</a></li>
-                <li><a href="../Zenflix/about.html">Articles</a></li>
+                <li><a href="media.html">Movies</a></li>
+                <li><a href="media.html">TV serials</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
