--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Zenflix/styles/checkout_styles.css">
+    <link rel="stylesheet" href="styles/checkout_styles.css">
     <title>Zenflix</title>
     <!--Script for icons-->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
@@ -13,14 +13,14 @@
     <header>
     <div class="container">
         <div class="navbar">
-            <img src="../Zenflix/img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="../Zenflix/index.html">Home</a></li>
-                    <li><a href="../Zenflix/media.html">Media</a></li>
-                    <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="../Zenflix/about.html">About Us</a></li>
-                    <li><a href="../Zenflix/news.html">News</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="Subscription.html">Subscription</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="news.html">News</a></li>
                     
                 </ul>
             </nav>
@@ -117,7 +117,7 @@ Entered into force on November 02, 2017
 <div class="cont_3">
     <footer class="footer">
         <div class="footer-left">
-            <img src="../Zenflix/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>
                 Enjoy your favorite TV shows anywhere!
             </p>
@@ -132,10 +132,10 @@ Entered into force on November 02, 2017
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="../Zenflix/media.html">Movies</a></li>
-                <li><a href="../Zenflix/media.html">TV serials</a></li>
-                <li><a href="../Zenflix/news.html">News</a></li>
-                <li><a href="../Zenflix/about.html">Articles</a></li>
+                <li><a href="media.html">Movies</a></li>
+                <li><a href="media.html">TV serials</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
