--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Zenflix/styles/media_styles.css">
+    <link rel="stylesheet" href="styles/media_styles.css">
     <title>Zenflix</title>
     <!--Script for icons-->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
@@ -13,14 +13,14 @@
     <header>
         <div class="container">
             <div class="navbar">
-                <img src="../Zenflix/img/logo.png" class="logo">
+                <img src="img/logo.png" class="logo">
                 <nav>
                     <ul>
-                        <li><a href="../Zenflix/index.html">Home</a></li>
-                        <li><a href="../Zenflix/media.html">Media</a></li>
-                        <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                        <li><a href="../Zenflix/about.html">About Us</a></li>
-                        <li><a href="../Zenflix/news.html">News</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="Subscription.html">Subscription</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="news.html">News</a></li>
                         
                     </ul>
                 </nav>
@@ -37,7 +37,7 @@
             </div>
         </div>
     </header>
-<script src="../Zenflix/scripts/slider.js"></script>
+<script src="scripts/slider.js"></script>
 
 
 
@@ -55,16 +55,16 @@
 
                 <!--Images-->
                 <div class="slide first">
-                   <a href="https://www.youtube.com/watch?v=rlR4PJn8b8I&t=7s"><img src="../Zenflix/img/gameofthrones.jpg" alt=""></a> 
+                   <a href="https://www.youtube.com/watch?v=rlR4PJn8b8I&t=7s"><img src="img/gameofthrones.jpg" alt=""></a> 
                 </div>
                 <div class="slide">
-                  <a href="https://www.youtube.com/watch?v=R1ZXOOLMJ8s&t=7s"><img src="../Zenflix/img/strangerthings2.jpg" alt=""></a>  
+                  <a href="https://www.youtube.com/watch?v=R1ZXOOLMJ8s&t=7s"><img src="img/strangerthings2.jpg" alt=""></a>  
                 </div>
                 <div class="slide">
-                 <a href="https://www.youtube.com/watch?v=hl1U0bxTHbY&t=16s"><img src="../Zenflix/img/rickandmorty.jpg" alt=""></a>   
+                 <a href="https://www.youtube.com/watch?v=hl1U0bxTHbY&t=16s"><img src="img/rickandmorty.jpg" alt=""></a>   
                 </div>
                 <div class="slide">
-                  <a href="https://www.youtube.com/watch?v=1JLUn2DFW4w"><img src="../Zenflix/img/breakingbad.jpg" alt=""></a>  
+                  <a href="https://www.youtube.com/watch?v=1JLUn2DFW4w"><img src="img/breakingbad.jpg" alt=""></a>  
                 </div>
 
                 <!--Auto start-->
@@ -100,7 +100,7 @@
 Stranger Things (2016-...)
 </div>
 <div class="movie-image">
-<img src="../Zenflix/img/strangermovie.jpg">
+<img src="img/strangermovie.jpg">
 </div>
 <div class="movie-text">
     American science fiction series 
@@ -120,7 +120,7 @@ Stranger Things (2016-...)
     Breaking Bad (2008-2013)
     </div>
     <div class="movie-image">
-    <img src="../Zenflix/img/breakingbadmovie.jpg">
+    <img src="img/breakingbadmovie.jpg">
     </div>
     <div class="movie-text">
         The story of Walter White, a schoolteacher who was diagnosed with inoperable lung cancer. 
@@ -139,7 +139,7 @@ Stranger Things (2016-...)
         Game of Thrones (2011-2019)
         </div>
         <div class="movie-image">
-        <img src="../Zenflix/img/gameofthronesmovie.jpg">   <!--400x400 size-->
+        <img src="img/gameofthronesmovie.jpg">   <!--400x400 size-->
         </div>
         <div class="movie-text">
             The story of a medieval country's civil war. The series
@@ -158,7 +158,7 @@ Stranger Things (2016-...)
             Dexter (2006-2013)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/dextermovie.jpg">   
+            <img src="img/dextermovie.jpg">   
             </div>
             <div class="movie-text">
                 By day, mild-mannered Dexter is a blood-spatter analyst for the Miami police. 
@@ -178,7 +178,7 @@ Stranger Things (2016-...)
                 Californication (2007-2014)
                 </div>
                 <div class="movie-image">
-                <img src="../Zenflix/img/californication.jpg">   
+                <img src="img/californication.jpg">   
                 </div>
                 <div class="movie-text">
                     Humor, sex and charisma - David Duchovny as a misanthrope writer tries to get out of the creative crisis
@@ -197,7 +197,7 @@ Stranger Things (2016-...)
                     Rick and Morty (2013-....)
                     </div>
                     <div class="movie-image">
-                    <img src="../Zenflix/img/rickandmortymovie.jpg">   
+                    <img src="img/rickandmortymovie.jpg">   
                     </div>
                     <div class="movie-text">
                         The funny adventures of the alcoholic Rick and his 
@@ -217,7 +217,7 @@ Stranger Things (2016-...)
             Fargo (2014-....)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/fargomovie.jpg">
+            <img src="img/fargomovie.jpg">
             </div>
             <div class="movie-text">
                 The show is inspired by the eponymous 1996 film, which was written and directed by the Coen brothers.
@@ -236,7 +236,7 @@ Stranger Things (2016-...)
             Black Mirror (2011-....)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/blackmirror.jpg">
+            <img src="img/blackmirror.jpg">
             </div>
             <div class="movie-text">
                 The sci-fi series reflects the familiar world that is shrouded in technology. 
@@ -256,7 +256,7 @@ Stranger Things (2016-...)
             True Detective (2014-....)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/truedetectivemovie.jpg">
+            <img src="img/truedetectivemovie.jpg">
             </div>
             <div class="movie-text">
                 Seasonal anthology series in which police investigations unearth the personal and professional secrets of those involved,
@@ -275,7 +275,7 @@ Stranger Things (2016-...)
                 Once Upon a Time in Hollywood (2019)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/onceuponmovie.jpg">
+            <img src="img/onceuponmovie.jpg">
             </div>
             <div class="movie-text">
                 1969, the golden age of Hollywood is over. 
@@ -293,7 +293,7 @@ Stranger Things (2016-...)
                 Joker (2019)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/jokermovie.jpg">
+            <img src="img/jokermovie.jpg">
             </div>
             <div class="movie-text">
                 Gotham City, 1981. Public utilities are on strike in the city, unemployment reigns. 
@@ -311,7 +311,7 @@ Stranger Things (2016-...)
                 Forrest Gump (1994)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/forrestmovie.jpg">
+            <img src="img/forrestmovie.jpg">
             </div>
             <div class="movie-text">
                 Forrest's life as a bird's feather carries through the most important events in American history. But he does not get lost and, thanks to his athletic abilities,
@@ -329,7 +329,7 @@ Stranger Things (2016-...)
                 Babysitting (2015)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/babysittingmovie.jpg   ">
+            <img src="img/babysittingmovie.jpg   ">
             </div>
             <div class="movie-text">
                 Franck and his girlfriend Sonya, plus some of their friends go on holiday in Brasil. Franck, 
@@ -347,7 +347,7 @@ Stranger Things (2016-...)
                 500 Dayos of Summer (2009)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/500daysmovie.jpg">
+            <img src="img/500daysmovie.jpg">
             </div>
             <div class="movie-text">
                 The film is presented in a nonlinear narrative, jumping between various days within the 500 days of Tom and Summer's relationship. 
@@ -365,7 +365,7 @@ Stranger Things (2016-...)
                 The Great Gatsby (2013)
             </div>
             <div class="movie-image">
-            <img src="../Zenflix/img/gatsbymovie.jpg">
+            <img src="img/gatsbymovie.jpg">
             </div>
             <div class="movie-text">
                 A writer and wall street trader, Nick, finds himself drawn to the past and lifestyle of his millionaire neighbor, Jay Gatsby.
@@ -387,7 +387,7 @@ Stranger Things (2016-...)
  <div class="cont_3">
     <footer class="footer">
         <div class="footer-left">
-            <img src="../Zenflix/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>
                 Enjoy your favorite TV shows anywhere!
             </p>
@@ -402,10 +402,10 @@ Stranger Things (2016-...)
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="../Zenflix/media.html">Movies</a></li>
-                <li><a href="../Zenflix/media.html">TV serials</a></li>
-                <li><a href="../Zenflix/news.html">News</a></li>
-                <li><a href="../Zenflix/about.html">Articles</a></li>
+                <li><a href="media.html">Movies</a></li>
+                <li><a href="media.html">TV serials</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
