--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Zenflix/styles/news_styles.css">
+    <link rel="stylesheet" href="styles/news_styles.css">
     <title>Zenflix</title>
     <!--Script for icons-->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
@@ -13,14 +13,14 @@
     <header>
     <div class="container">
         <div class="navbar">
-            <img src="../Zenflix/img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="../Zenflix/index.html">Home</a></li>
-                    <li><a href="../Zenflix/media.html">Media</a></li>
-                    <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="../Zenflix/about.html">About Us</a></li>
-                    <li><a href="../Zenflix/news.html">News</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="Subscription.html">Subscription</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="news.html">News</a></li>
                     
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
 <section class="sec-news">
 <div class="news-post">
     <div class="news-img">
-        <img src="../Zenflix/img/news1.jpg" alt="">
+        <img src="img/news1.jpg" alt="">
     </div>
     <div class="news-info">
         <div class="news-info-date">
@@ -68,7 +68,7 @@
 <section class="sec-news">
     <div class="news-post">
         <div class="news-img">
-            <img src="../Zenflix/img/news2.jpg" alt="">
+            <img src="img/news2.jpg" alt="">
         </div>
         <div class="news-info">
             <div class="news-info-date">
@@ -93,7 +93,7 @@
 <section class="sec-news">
     <div class="news-post">
         <div class="news-img">
-            <img src="../Zenflix/img/news3.jpg" alt="">
+            <img src="img/news3.jpg" alt="">
         </div>
         <div class="news-info-3">
             <div class="news-info-date">
@@ -116,7 +116,7 @@
 <section class="sec-news">
     <div class="news-post">
         <div class="news-img">
-            <img src="../Zenflix/img/news4.jpg" alt="">
+            <img src="img/news4.jpg" alt="">
         </div>
         <div class="news-info-3">
             <div class="news-info-date">
@@ -145,7 +145,7 @@ the heroes will have to deal with the consequences of the ended war with the Whi
 <div class="cont_3">
     <footer class="footer">
         <div class="footer-left">
-            <img src="../Zenflix/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>
                 Enjoy your favorite TV shows anywhere!
             </p>
@@ -160,10 +160,10 @@ the heroes will have to deal with the consequences of the ended war with the Whi
             <li>
             <h2>Content</h2>
             <ul class="box">
-            <li><a href="../Zenflix/media.html">Movies</a></li>
-            <li><a href="../Zenflix/media.html">TV serials</a></li>
-            <li><a href="../Zenflix/news.html">News</a></li>
-            <li><a href="../Zenflix/about.html">Articles</a></li>
+            <li><a href="media.html">Movies</a></li>
+            <li><a href="media.html">TV serials</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="about.html">Articles</a></li>
             <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
