--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Zenflix/styles/about_styles.css">
+    <link rel="stylesheet" href="styles/about_styles.css">
     <title>Zenflix</title>
     <!--Script for icons-->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
@@ -13,14 +13,14 @@
     <header>
     <div class="container">
         <div class="navbar">
-            <img src="../Zenflix/img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="../Zenflix/index.html">Home</a></li>
-                    <li><a href="../Zenflix/media.html">Media</a></li>
-                    <li><a href="../Zenflix/Subscription.html">Subscription</a></li>
-                    <li><a href="../Zenflix/about.html">About Us</a></li>
-                    <li><a href="../Zenflix/news.html">News</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="Subscription.html">Subscription</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="news.html">News</a></li>
                     
                 </ul>
             </nav>
@@ -57,7 +57,7 @@
         The service itself was founded in the USA in 2017 under the leadership of Mads Mikkelsen.
         A distinctive feature of the site is the presence of fresh news as well as exclusive content available by subscription.
     </p>
-    <img src="../Zenflix/img/bestseries.png" alt="" class="bestseries">
+    <img src="img/bestseries.png" alt="" class="bestseries">
     <h2 class="table-content">Main Advantages of our server</h2>
     <ul class="table-advantages">
         <li>Fast data transfer</li>
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="columns">
                     <div class="testimonial">
-                        <img src="../Zenflix/img/mads.jpg" alt="">
+                        <img src="img/mads.jpg" alt="">
                         <div class="name">Mads Mikkelsen</div>
                         <div class="hearts">
                         <ion-icon name="heart-outline"></ion-icon>
@@ -95,7 +95,7 @@
                     
                 <div class="columns">
                     <div class="testimonial">
-                        <img src="../Zenflix/img/taissa.jpg" alt="">
+                        <img src="img/taissa.jpg" alt="">
                         <div class="name">Taissa McSean</div>
                         <div class="hearts">
                         <ion-icon name="heart-outline"></ion-icon>
@@ -119,7 +119,7 @@
 <div class="cont_3">
     <footer class="footer">
         <div class="footer-left">
-            <img src="../Zenflix/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>
                 Enjoy your favorite TV shows anywhere!
             </p>
@@ -134,10 +134,10 @@
             <li>
             <h2>Content</h2>
             <ul class="box">
-                <li><a href="../Zenflix/media.html">Movies</a></li>
-                <li><a href="../Zenflix/media.html">TV serials</a></li>
-                <li><a href="../Zenflix/news.html">News</a></li>
-                <li><a href="../Zenflix/about.html">Articles</a></li>
+                <li><a href="media.html">Movies</a></li>
+                <li><a href="media.html">TV serials</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Articles</a></li>
                 <li><a href="#">Schedule</a></li>
                 </ul>
             </li>
