--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
     </div>
     <div class="ads">
         <div class="ad-item">
-<img src="img/tv.png" class="mid-img">
+<img src="img/television.png" class="mid-img">
 <h3>
     Quality
 </h3>
 <p> High quality picture will allow you to fully enjoy watching your favorite TV series or movie </p>
         </div>
         <div class="ad-item">
-            <img src="img/like.png" class="mid-img">
+            <img src="img/copywriting.png" class="mid-img">
 <h3>
     Quality assurance
 </h3>
 <p> With the help of special codecs embedded in the video, all content can be watched even at low Internet speed without a single loss in quality </p>
         </div>
         <div class="ad-item">
-            <img src="img/smile.png" class="mid-img">
+            <img src="img/community.png" class="mid-img">
 <h3>
     Huge audience
 </h3>
